kubernetes/deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-with-quarkus
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: code-with-quarkus
  type: ClusterIP
