kubernetes/deployment/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: code-with-quarkus
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: deployment-code-with-quarkus
    weight: 100
  wildcardPolicy: None
